Updating the TCs