@@ -9,6 +9,7 @@ import static org.mockito.Mockito.when;
 import com.springbooteshop.SpringBootEShop.model.Book;
 import com.springbooteshop.SpringBootEShop.service.BookService;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.springframework.data.domain.Page;
@@ -24,8 +25,8 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributesModelMap;
 
 class BookControllerTest {
 
-  private BookService bookService = mock(BookService.class);
-  private BookController bookController = new BookController(bookService);
+  private final BookService bookService = mock(BookService.class);
+  private final BookController bookController = new BookController(bookService);
 
   @Test
   void findPaginated_shouldReturnListOfBooksWhenTermIsNull() {
@@ -40,7 +41,7 @@ class BookControllerTest {
 
     assertThat(result).isEqualTo("list");
     assertThat(model.asMap().get("bookPage")).isEqualTo(bookPage);
-    assertThat(model.asMap().get("pageNumbers")).isEqualTo(Arrays.asList(1));
+    assertThat(model.asMap().get("pageNumbers")).isEqualTo(List.of(1));
   }
 
   @Test
@@ -95,7 +96,7 @@ class BookControllerTest {
   @Test
   void testEditBook() {
     Long id = 1L;
-    Optional<Book> book = Optional.ofNullable(new Book());
+    Optional<Book> book = Optional.of(new Book());
     when(bookService.findBookById(id)).thenReturn(book);
     Model model = new BindingAwareModelMap();
 
